2001-06-10  Tim Mooney  <mooney@dogbert.cc.ndsu.NoDak.edu>

	* aclocal.in (parse_arguments, write_aclocal): Update Copyrights.
	* aclocal.in (scan_configure, add_file): Handle the full macro
	name even if it contains numbers, such as I18N.

2001-07-16  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Dependencies): Link to dependency tracking page.
	(Data): Mention dist_.
	(Clean): Mention clean heuristics.
	(Install): Mention nobase_.

	* automake.texi (Program and Library Variables): Document _LINK.

2001-07-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_libraries): Allow libraries to lie in
	a subdirectory by constraining only the basename to start
	with 'lib', not the whole path.

2001-07-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/subobj8.test: New file.
	* tests/Makefile.am (XFAIL_TESTS, TESTS): Add subobj8.test.

2001-07-16  Tom Tromey  <tromey@redhat.com>

	Fix for PR automake/212:
	* lib/am/lisp.am (install-%DIR%LISP): Added missing `\'.
	(uninstall-%DIR%LISP): Likewise.

2001-07-15  Tom Tromey  <tromey@redhat.com>

	* automake.in (usage): Rewrote code to handle columnization.
	From Alexey Mahotkin and Maxim Sinev.

	Report from Ralf Corsepius:
	* automake.in (TARGET_PATTERN): Add `+' as valid character.
	(SUFFIX_RULE_PATTERN): Likewise.
	* tests/Makefile.am (TESTS): Added cxx.test.
	* tests/cxx.test: New file.

	* lib/am/tags.am (distclean-tags): Remove files for gtags.
	From Shigio Yamaguchi.

2001-07-14  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* lib/am/distdir.am (distcheck): Emit diagnostic when files
	remain after "make uninstall".

2001-07-14  Tom Tromey  <tromey@redhat.com>

	* lib/am/tags.am (.PHONY): Depend on GTAGS.  From Shigio Yamaguchi.

	* lib/missing (makeinfo): Redirect stdout and stderr outside
	subshell.  From Alexandre Oliva.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* automake.in ($obsolete_rx): No need for `\b(foo\b|\bbar)\b',
	`\b(foo|bar)\b' is what we want.
	* aclocal.in: Likewise.
