@@ -1,3 +1,8 @@
+2001-07-17  Tom Tromey  <tromey@redhat.com>
+
+	* m4/depend.m4 (AM_DEPENDENCIES): Renamed to _AM_DEPENDENCIES.
+	* m4/init.m4: Updated callers.
+
 2001-06-10  Tim Mooney  <mooney@dogbert.cc.ndsu.NoDak.edu>
 
 	* aclocal.in (parse_arguments, write_aclocal): Update Copyrights.
